# C-tutorial-projects

./: README.md
10hr_tut_C/: 1.3-basics.c  2.1-variables-data-types.c  3.1-logic.c  ArithmeticOperators.c  Arrays.c  Break.c  CMakeLists.txt  Char.c  CodingChallenge.c  Continue.c  DietApp.c  DoWhile.c  ElseIf.c  Function.c  GuessingGame.c  IfStatements.c  ImplicitTypePromotion.c  IncrementDecrement.c  Loop.c  MultiArray.c  NestedFor.c  NestedWhile.c  NumericDataTypes.c  OperatorPrecedence.c  PassArray.c  Pointers.c  PrimeChecker.c  Strings.c  Structs.c  SwitchElseIf.c  Ternary.c  TypeCasting.c  UnaryPlusMinus.c  While.c  bool.c
Effective_C/: CMakeLists.txt  Exercise1-1.c  Exercise1-2.c  hello.c
