cmake_minimum_required(VERSION 3.21)
project(10hr_tut C)

set(CMAKE_C_STANDARD 11)

add_executable(10hr_tut
        1.3-basics.c
        2.1-variables-data-types.c
        3.1-logic.c
        ArithmeticOperators.c
        Arrays.c
        bool.c
        Break.c
        Char.c
        CodingChallenge.c
        Continue.c
        DietApp.c
        DoWhile.c
        ElseIf.c
        Function.c
        GuessingGame.c
        IfStatements.c
        ImplicitTypePromotion.c
        IncrementDecrement.c
        Loop.c
        MultiArray.c
        NestedFor.c
        NestedWhile.c
        NumericDataTypes.c
        OperatorPrecedence.c
        PassArray.c
        Pointers.c
        PrimeChecker.c
        Strings.c
        Structs.c
        SwitchElseIf.c
        Ternary.c
        TypeCasting.c
        UnaryPlusMinus.c
        While.c)
